--- a/views/store.ejs
+++ b/views/store.ejs
@@ -113,7 +113,7 @@ p {
                 <% items.music.forEach(function(item){%>
 
                 <div class="shop-item" data-item-id="<%= item.id %>">
-                    <span class="shop-item-title" style="font-family: 'Kanit', sans-serif color:#fdd900"><%= item.name %></span>
+                    <span class="shop-item-title" style="font-family: 'Kanit', sans-serif; color:#fdd900"><%= item.name %></span>
                     <img class="shop-item-image" src="Images/<%= item.imgName %>">
                     <div class="shop-item-details">
                         <span class="shop-item-price" style="font-family: 'Kanit', sans-serif">฿<%= item.price / 100 %></span>
